<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_calculator"
            android:icon="@drawable/ic__menu_triangle"
            android:title="@string/menu_triangle" />
        <item
            android:id="@+id/nav_change_binari_base"
            android:icon="@drawable/ic_menu_cambio_binario_base"
            android:title="@string/menu_binario_base" />

        <item
            android:id="@+id/nav_change_base_binari"
            android:icon="@drawable/ic_baseline_exposure_zero_24"
            android:title="@string/menu_base_binari" />
    </group>
</menu>